<resources>
    <string name="app_name">Smart Home</string>
    <string name="todo">TODO</string>
    <string name="smart_home">SMART HOME</string>
    <string name="deviceLogo" />
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="agree_with_terms_amp_conditions"><![CDATA[Agree with Terms & Conditions]]></string>
    <string name="my_devices">My Devices</string>
    <string name="empty_now">Empty Now</string>
    <string name="do_you_want">Do you want add new device?</string>
    <string name="add_a_new_device">Add a new device</string>
    <string name="add_a_new_device_2">Add A New Device</string>
    <string name="with_brands">With Brands</string>
    <string name="choose_a_brand">Choose a brand</string>
    <string name="with_rooms">With Rooms</string>
    <string name="choose_a_room">Choose a room</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="choose_a_device">Choose a device</string>
    <string name="account_details">Account Details</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="title_activity_device_data">Device_Data</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="device_details">Device Details</string>
    <string name="device_serial_number">Device Serial Number</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="lights">Lights</string>
    <string name="power_status">Power Status</string>
    <string name="on">On</string>
    <string name="bedroom">Bedroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="living_room">Living Room</string>
    <string name="light">Light</string>
    <string name="samsung">Samsung</string>
</resources>