<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add">

    <RelativeLayout
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/animation"
        >

        <View
            android:id="@+id/background_top"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-1dp"
            android:background="@drawable/background_2" />

        <ImageButton
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/user"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/smart_home"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:text="@string/smart_home"
            android:layout_marginStart="130dp"
            android:textAppearance="@style/smart_home_2"
            android:gravity="center_horizontal|center_vertical"
            />

        <View
            android:id="@+id/background"
            android:layout_width="303dp"
            android:layout_height="520dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="95dp"
            android:background="@drawable/background_add_device"
            />

        <View
            android:id="@+id/line_1"
            android:layout_width="304dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="145dp"
            android:background="@drawable/line_1"
            />

        <TextView
            android:id="@+id/my_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="110dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_a_new_device_2"
            android:textAppearance="@style/my_devices" />

        <View
            android:id="@+id/brands_rect"
            android:layout_width="274dp"
            android:layout_height="151dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="65dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="170dp"
            android:background="@drawable/rectangle_3"
            />


        <TextView
            android:id="@+id/brands"
            android:layout_width="284dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="175dp"
            android:text="@string/with_brands"
            android:textAppearance="@style/do_you_want"
            android:gravity="fill_horizontal"
            />

        <Button
            android:id="@+id/addBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="230dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#7F173B"
            android:text="@string/choose_a_brand"
            android:onClick="addBrand"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <View
            android:id="@+id/rooms_rect"
            android:layout_width="274dp"
            android:layout_height="151dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="65dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="390dp"
            android:background="@drawable/rectangle_3"
            />


        <TextView
            android:id="@+id/rooms"
            android:layout_width="284dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="395dp"
            android:text="@string/with_rooms"
            android:textAppearance="@style/do_you_want"
            android:gravity="fill_horizontal"
            />

        <Button
            android:id="@+id/addRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="450dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#7F173B"
            android:text="@string/choose_a_room"
            android:onClick="addRoom"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>