<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <RelativeLayout
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/animation"
        >


        <View
            android:id="@+id/background"
            android:layout_width="303dp"
            android:layout_height="593dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="56dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/background" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="33dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sign_up"
            android:textAppearance="@style/sign_in" />

        <ScrollView
            android:layout_width="287dp"
            android:layout_height="438dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="85dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/user_name"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/e_mail_box"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/first_name"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/e_mail_box"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/last_name"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/e_mail_box"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/e_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/e_mail"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/e_mail_box"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/phone_number"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/Phonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/e_mail_box"
                    android:ems="10"
                    android:inputType="phone"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/password"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/e_mail_box"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />


            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="566dp"
            android:backgroundTint="#7F173B"
            android:text="@string/register"
            android:onClick="register"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/remember_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="314dp"
            android:layout_marginTop="525dp"
            android:minWidth="48dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="538dp"
            android:gravity="center_horizontal|top"
            android:text="@string/agree_with_terms_amp_conditions"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>