<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoDev">

    <RelativeLayout
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/animation"
        >

        <View
            android:id="@+id/background_top"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-1dp"
            android:background="@drawable/background_2" />

        <ImageButton
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/user"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/smart_home"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:text="@string/smart_home"
            android:layout_marginStart="130dp"
            android:textAppearance="@style/smart_home_2"
            android:gravity="center_horizontal|center_vertical"
            />

        <View
            android:id="@+id/background"
            android:layout_width="340dp"
            android:layout_height="400dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_add_device"
            />

        <View
            android:id="@+id/line_1"
            android:layout_width="341dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="180dp"
            android:background="@drawable/line_1"
            />

        <TextView
            android:id="@+id/my_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="145dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/device_details"
            android:textAppearance="@style/my_devices" />

        <EditText
            android:id="@+id/serial_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="200dp"
            android:ems="15"
            android:gravity="fill_horizontal"
            android:hint="@string/device_serial_number"
            android:inputType="text"
            android:textAppearance="@style/my_devices"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="250dp"
            android:ems="15"
            android:gravity="fill_horizontal"
            android:hint="@string/purchase_date"
            android:inputType="text"
            android:textAppearance="@style/my_devices"
            android:textSize="18sp" />

        <Button
            android:id="@+id/addDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="470dp"
            android:backgroundTint="#7F173B"
            android:onClick="confirm"
            android:text="Confirm"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


    </RelativeLayout>
</LinearLayout>